Establish core game infrastructure